tests/snapshots/stdlib_generated_rust_snapshot_tests__std_compression_core_source.snap
---
source: tests/stdlib_generated_rust_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone)]
pub enum __IncanUnionf13d01fefab04049 {
    V0(File),
    V1(_BytesIO),
}
pub use crate::__incan_std::fs::File;
use crate::__incan_std::io::_BytesIO;
pub use crate::__incan_std::traits::error::Error;
#[derive(Debug, Clone, PartialEq)]
pub enum Codec {
    Gzip,
    Zlib,
    Deflate,
    Zstd,
    Bz2,
    Lzma,
    Snappy,
}
impl Codec {
    pub fn message(&self) -> String {
        match self {
            Self::Gzip => "Gzip".to_string(),
            Self::Zlib => "Zlib".to_string(),
            Self::Deflate => "Deflate".to_string(),
            Self::Zstd => "Zstd".to_string(),
            Self::Bz2 => "Bz2".to_string(),
            Self::Lzma => "Lzma".to_string(),
            Self::Snappy => "Snappy".to_string(),
        }
    }
}
impl Codec {
    pub fn value(&self) -> String {
        match self {
            Self::Gzip => "gzip".to_string(),
            Self::Zlib => "zlib".to_string(),
            Self::Deflate => "deflate".to_string(),
            Self::Zstd => "zstd".to_string(),
            Self::Bz2 => "bz2".to_string(),
            Self::Lzma => "lzma".to_string(),
            Self::Snappy => "snappy".to_string(),
        }
    }
    pub fn from_value(value: impl AsRef<str>) -> Option<Self> {
        match value.as_ref() {
            "gzip" => Some(Self::Gzip),
            "zlib" => Some(Self::Zlib),
            "deflate" => Some(Self::Deflate),
            "zstd" => Some(Self::Zstd),
            "bz2" => Some(Self::Bz2),
            "lzma" => Some(Self::Lzma),
            "snappy" => Some(Self::Snappy),
            _ => None,
        }
    }
}
impl std::fmt::Display for Codec {
    fn fmt(&self, formatter: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        match self {
            Self::Gzip => formatter.write_str("gzip"),
            Self::Zlib => formatter.write_str("zlib"),
            Self::Deflate => formatter.write_str("deflate"),
            Self::Zstd => formatter.write_str("zstd"),
            Self::Bz2 => formatter.write_str("bz2"),
            Self::Lzma => formatter.write_str("lzma"),
            Self::Snappy => formatter.write_str("snappy"),
        }
    }
}
impl std::str::FromStr for Codec {
    type Err = String;
    fn from_str(value: &str) -> Result<Self, Self::Err> {
        Self::from_value(value)
            .ok_or_else(|| {
                format!("invalid value for {}: {}", stringify!(Codec), value)
            })
    }
}
impl Codec {
    pub fn all() -> Vec<Codec> {
        "\n        Return the stable codec order used by default autodetection filters.\n\n        Raw Snappy block compression is intentionally absent because it has no framing signature.\n        ";
        return vec![
            Codec::Gzip.clone(), Codec::Zlib.clone(), Codec::Deflate.clone(), Codec::Zstd
            .clone(), Codec::Bz2.clone(), Codec::Lzma.clone(), Codec::Snappy.clone()
        ];
    }
}
#[derive(Clone, Debug, incan_derive::FieldInfo, incan_derive::IncanClass)]
pub struct CompressionError {
    pub kind: String,
    pub codec: Option<Codec>,
    pub operation: String,
    pub detail: String,
}
impl CompressionError {
    pub fn message(&self) -> String {
        "\n        Return the human-readable error detail.\n        ";
        return self.detail.clone();
    }
    pub fn source(&self) -> Option<String> {
        "\n        Return a structured source error when one is available.\n\n        Compression currently normalizes backend details into `detail`, so there is no nested source value.\n        ";
        return None::<_>;
    }
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 4] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("kind"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("kind"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("codec"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("codec"),
                type_name: incan_stdlib::frozen::FrozenStr::new("Option[Codec]"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("operation"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("operation"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("detail"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("detail"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl Error for CompressionError {
    fn message(&self) -> String {
        "\n        Return the human-readable error detail.\n        ";
        return self.detail.clone();
    }
    fn source(&self) -> Option<String> {
        "\n        Return a structured source error when one is available.\n\n        Compression currently normalizes backend details into `detail`, so there is no nested source value.\n        ";
        return None::<_>;
    }
}
pub fn _level_or_default(
    codec: Codec,
    level: Option<i64>,
    default: i64,
    minimum: i64,
    maximum: i64,
) -> Result<i64, CompressionError> {
    "\n    Validate a portable integer compression-level request.\n    ";
    match level {
        Some(value) => {
            if value < minimum || value > maximum {
                return Err::<
                    i64,
                    CompressionError,
                >(CompressionError {
                    kind: "invalid_level".to_string(),
                    codec: Some(codec.clone()),
                    operation: "compress".to_string(),
                    detail: {
                        let __parts: [&str; 4usize] = [
                            "level for ",
                            " must be between ",
                            " and ",
                            "",
                        ];
                        let __args: Vec<String> = vec![
                            format!("{}", codec.value()), format!("{}", minimum),
                            format!("{}", maximum)
                        ];
                        incan_stdlib::strings::fstring(&__parts, &__args)
                    },
                });
            }
            return Ok::<i64, CompressionError>(value);
        }
        None => {
            return Ok::<i64, CompressionError>(default);
        }
    };
}
pub fn _reject_level(codec: Codec, level: Option<i64>) -> Result<(), CompressionError> {
    "\n    Reject a level argument for codecs without level support.\n    ";
    match level {
        Some(_) => {
            return Err::<
                (),
                CompressionError,
            >(CompressionError {
                kind: "unsupported_option".to_string(),
                codec: Some(codec.clone()),
                operation: "compress".to_string(),
                detail: {
                    let __parts: [&str; 2usize] = [
                        "",
                        " does not support configurable compression levels",
                    ];
                    let __args: Vec<String> = vec![format!("{}", codec.value())];
                    incan_stdlib::strings::fstring(&__parts, &__args)
                },
            });
        }
        None => {
            return Ok::<(), CompressionError>(());
        }
    };
}
pub fn _codec_error(
    codec: Codec,
    operation: String,
    detail: String,
) -> CompressionError {
    "\n    Build a codec failure from backend error text.\n\n    Backend crates expose different error enums and messages. The first source pass keeps a stable Incan `kind` by\n    classifying the most common invalid/truncated markers and otherwise preserving the backend text as `backend`.\n    ";
    let mut kind = "backend".to_string();
    if incan_stdlib::strings::str_contains(&detail, &"EOF")
        || incan_stdlib::strings::str_contains(&detail, &"eof")
        || incan_stdlib::strings::str_contains(&detail, &"early")
        || incan_stdlib::strings::str_contains(&detail, &"truncated")
    {
        kind = "truncated_input".to_string();
    } else {
        if incan_stdlib::strings::str_contains(&detail, &"invalid")
            || incan_stdlib::strings::str_contains(&detail, &"corrupt")
            || incan_stdlib::strings::str_contains(&detail, &"checksum")
        {
            kind = "invalid_data".to_string();
        }
    }
    return CompressionError {
        kind: kind.to_string(),
        codec: Some(codec),
        operation: operation,
        detail: detail,
    };
}
pub fn _io_error(
    codec: Option<Codec>,
    operation: String,
    detail: String,
) -> CompressionError {
    "\n    Build an I/O failure.\n    ";
    return CompressionError {
        kind: "io".to_string(),
        codec: codec,
        operation: operation,
        detail: detail,
    };
}
pub fn _validate_chunk_size(
    codec: Option<Codec>,
    operation: String,
    chunk_size: i64,
) -> Result<(), CompressionError> {
    "\n    Reject a non-positive stream chunk size before touching source or target streams.\n    ";
    if chunk_size <= 0 {
        return Err::<
            (),
            CompressionError,
        >(CompressionError {
            kind: "invalid_chunk_size".to_string(),
            codec: codec,
            operation: operation,
            detail: "chunk_size must be positive".to_string(),
        });
    }
    return Ok::<(), CompressionError>(());
}
pub fn _write_sink_bytes(
    codec: Option<Codec>,
    operation: String,
    target: __IncanUnionf13d01fefab04049,
    data: Vec<u8>,
) -> Result<(), CompressionError> {
    "\n    Write one compressed or decompressed chunk to a `BytesIO` or `File` sink.\n\n    Stream helpers keep codec adapters in their codec modules, but use this shared sink boundary so `IoError`\n    normalization stays identical across modules.\n    ";
    match target.clone() {
        __IncanUnionf13d01fefab04049::V1(target) => {
            match target.write_bytes(data) {
                Ok(_) => {
                    return Ok::<(), CompressionError>(());
                }
                Err(err) => {
                    return Err::<
                        (),
                        CompressionError,
                    >(_io_error(codec.clone(), operation.to_string(), err.message()));
                }
            };
        }
        __IncanUnionf13d01fefab04049::V0(target) => {
            match target.write_bytes(data) {
                Ok(_) => {
                    return Ok::<(), CompressionError>(());
                }
                Err(err) => {
                    return Err::<
                        (),
                        CompressionError,
                    >(_io_error(codec, operation, err.message()));
                }
            };
        }
    }
}
pub fn _byte_at(data: Vec<u8>, index: i64) -> i64 {
    "\n    Read one byte as an integer for signature checks.\n    ";
    return (data[(index) as usize]) as i64;
}
pub fn _looks_like_gzip(data: Vec<u8>) -> bool {
    "\n    Return whether `data` starts with the gzip magic bytes.\n    ";
    return ::std::convert::identity(data.len() as i64) >= 2
        && _byte_at(data.clone(), 0) == 31 && _byte_at(data, 1) == 139;
}
pub fn _looks_like_zstd(data: Vec<u8>) -> bool {
    "\n    Return whether `data` starts with the zstd frame magic bytes.\n    ";
    return ::std::convert::identity(data.len() as i64) >= 4
        && _byte_at(data.clone(), 0) == 40 && _byte_at(data.clone(), 1) == 181
        && _byte_at(data.clone(), 2) == 47 && _byte_at(data, 3) == 253;
}
pub fn _looks_like_bz2(data: Vec<u8>) -> bool {
    "\n    Return whether `data` starts with the bzip2 stream signature.\n    ";
    return ::std::convert::identity(data.len() as i64) >= 3
        && _byte_at(data.clone(), 0) == 66 && _byte_at(data.clone(), 1) == 90
        && _byte_at(data, 2) == 104;
}
pub fn _looks_like_xz(data: Vec<u8>) -> bool {
    "\n    Return whether `data` starts with the XZ container magic bytes.\n    ";
    return ::std::convert::identity(data.len() as i64) >= 6
        && _byte_at(data.clone(), 0) == 253 && _byte_at(data.clone(), 1) == 55
        && _byte_at(data.clone(), 2) == 122 && _byte_at(data.clone(), 3) == 88
        && _byte_at(data.clone(), 4) == 90 && _byte_at(data, 5) == 0;
}
pub fn _looks_like_snappy_frame(data: Vec<u8>) -> bool {
    "\n    Return whether `data` starts with the framed Snappy stream identifier.\n    ";
    return ::std::convert::identity(data.len() as i64) >= 10
        && _byte_at(data.clone(), 0) == 255 && _byte_at(data.clone(), 1) == 6
        && _byte_at(data.clone(), 2) == 0 && _byte_at(data.clone(), 3) == 0
        && _byte_at(data.clone(), 4) == 115 && _byte_at(data.clone(), 5) == 78
        && _byte_at(data.clone(), 6) == 97 && _byte_at(data.clone(), 7) == 80
        && _byte_at(data.clone(), 8) == 112 && _byte_at(data, 9) == 89;
}
pub fn _looks_like_zlib(data: Vec<u8>) -> bool {
    "\n    Return whether `data` has a valid zlib header.\n\n    Zlib's header does not have a fixed magic sequence. The RFC 1950 check below validates the compression method and\n    header checksum; decompression still owns the final data-validity decision.\n    ";
    if ::std::convert::identity(data.len() as i64) < 2 {
        return false;
    }
    let cmf = _byte_at(data.clone(), 0);
    let flg = _byte_at(data, 1);
    return incan_stdlib::num::py_mod_i64(cmf, 16) == 8
        && incan_stdlib::num::py_mod_i64(cmf * 256 + flg, 31) == 0;
}
