tests/snapshots/stdlib_generated_rust_snapshot_tests__std_compression_prelude_source.snap
---
source: tests/stdlib_generated_rust_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::compression::_core::Codec;
pub use crate::__incan_std::compression::_core::CompressionError;
pub use crate::__incan_std::compression::_auto::decompress_auto;
pub use crate::__incan_std::compression::_auto::decompress_auto_stream;
