tests/snapshots/stdlib_generated_rust_snapshot_tests__std_datetime_prelude_import.snap
---
source: tests/stdlib_generated_rust_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::datetime::DateTimeError;
pub use crate::__incan_std::datetime::Duration;
pub use crate::__incan_std::datetime::Instant;
pub use crate::__incan_std::datetime::SystemTime;
pub use crate::__incan_std::datetime::TimeDelta;
pub use crate::__incan_std::datetime::Date;
pub use crate::__incan_std::datetime::Time;
pub use crate::__incan_std::datetime::DateTime;
pub use crate::__incan_std::datetime::FixedOffset;
