tests/snapshots/stdlib_generated_rust_snapshot_tests__std_encoding_prelude_import.snap
---
source: tests/stdlib_generated_rust_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use incan_builtin_stdlib::encoding::base32;
pub use incan_builtin_stdlib::encoding::base64;
pub use incan_builtin_stdlib::encoding::hex;
pub use incan_builtin_stdlib::encoding::EncodingError;
