tests/snapshots/stdlib_generated_rust_snapshot_tests__std_result_source.snap
---
source: tests/stdlib_generated_rust_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
/// Transform an `Ok(T)` payload.
///
/// Args:
///     result: Result to inspect.
///     f: Function called with the `Ok(T)` payload.
///
/// Returns:
///     `Ok(f(value))` when `result` is `Ok(value)`, otherwise the original `Err(E)`.
pub fn map<
    T,
    E,
    U,
>(result: Result<T, E>, f: fn(T) -> U) -> Result<U, E> {
    let _ = "\n    Transform an `Ok(T)` payload.\n\n    Args:\n        result: Result to inspect.\n        f: Function called with the `Ok(T)` payload.\n\n    Returns:\n        `Ok(f(value))` when `result` is `Ok(value)`, otherwise the original `Err(E)`.\n    ";
    let _ = match result {
        Ok(value) => {
            return Ok::<U, E>(f(value));
        }
        Err(error) => {
            return Err::<U, E>(error);
        }
    };
}
pub use map as map;
/// Transform an `Err(E)` payload.
///
/// Args:
///     result: Result to inspect.
///     f: Function called with the `Err(E)` payload.
///
/// Returns:
///     `Err(f(error))` when `result` is `Err(error)`, otherwise the original `Ok(T)`.
pub fn map_err<
    T,
    E,
    F,
>(result: Result<T, E>, f: fn(E) -> F) -> Result<T, F> {
    let _ = "\n    Transform an `Err(E)` payload.\n\n    Args:\n        result: Result to inspect.\n        f: Function called with the `Err(E)` payload.\n\n    Returns:\n        `Err(f(error))` when `result` is `Err(error)`, otherwise the original `Ok(T)`.\n    ";
    let _ = match result {
        Ok(value) => {
            return Ok::<T, F>(value);
        }
        Err(error) => {
            return Err::<T, F>(f(error));
        }
    };
}
pub use map_err as map_err;
/// Chain a fallible operation after an `Ok(T)` payload.
///
/// Args:
///     result: Result to inspect.
///     f: Function called with the `Ok(T)` payload. It must return a `Result[U, E]`.
///
/// Returns:
///     The `Result[U, E]` returned by `f` when `result` is `Ok(value)`, otherwise the original `Err(E)`.
pub fn and_then<
    T,
    E,
    U,
>(result: Result<T, E>, f: fn(T) -> Result<U, E>) -> Result<U, E> {
    let _ = "\n    Chain a fallible operation after an `Ok(T)` payload.\n\n    Args:\n        result: Result to inspect.\n        f: Function called with the `Ok(T)` payload. It must return a `Result[U, E]`.\n\n    Returns:\n        The `Result[U, E]` returned by `f` when `result` is `Ok(value)`, otherwise the original `Err(E)`.\n    ";
    let _ = match result {
        Ok(value) => {
            return f(value);
        }
        Err(error) => {
            return Err::<U, E>(error);
        }
    };
}
pub use and_then as and_then;
/// Recover from an `Err(E)` payload with a fallible operation.
///
/// Args:
///     result: Result to inspect.
///     f: Function called with the `Err(E)` payload. It must return a `Result[T, F]`.
///
/// Returns:
///     The `Result[T, F]` returned by `f` when `result` is `Err(error)`, otherwise the original `Ok(T)`.
pub fn or_else<
    T,
    E,
    F,
>(result: Result<T, E>, f: fn(E) -> Result<T, F>) -> Result<T, F> {
    let _ = "\n    Recover from an `Err(E)` payload with a fallible operation.\n\n    Args:\n        result: Result to inspect.\n        f: Function called with the `Err(E)` payload. It must return a `Result[T, F]`.\n\n    Returns:\n        The `Result[T, F]` returned by `f` when `result` is `Err(error)`, otherwise the original `Ok(T)`.\n    ";
    let _ = match result {
        Ok(value) => {
            return Ok::<T, F>(value);
        }
        Err(error) => {
            return f(error);
        }
    };
}
pub use or_else as or_else;
/// Observe an `Ok(T)` payload while preserving the original result.
///
/// Args:
///     result: Result to inspect.
///     f: Function called with an implicit borrow of the `Ok(T)` payload.
///
/// Returns:
///     The original `Result[T, E]` after calling `f` for the `Ok(T)` branch.
pub fn inspect<
    T,
    E,
>(result: Result<T, E>, f: fn(&T) -> ()) -> Result<T, E> {
    let _ = "\n    Observe an `Ok(T)` payload while preserving the original result.\n\n    Args:\n        result: Result to inspect.\n        f: Function called with an implicit borrow of the `Ok(T)` payload.\n\n    Returns:\n        The original `Result[T, E]` after calling `f` for the `Ok(T)` branch.\n    ";
    let _ = match result {
        Ok(value) => {
            let _ = f(&value);
            return Ok::<T, E>(value);
        }
        Err(error) => {
            return Err::<T, E>(error);
        }
    };
}
pub use inspect as inspect;
/// Observe an `Err(E)` payload while preserving the original result.
///
/// Args:
///     result: Result to inspect.
///     f: Function called with an implicit borrow of the `Err(E)` payload.
///
/// Returns:
///     The original `Result[T, E]` after calling `f` for the `Err(E)` branch.
pub fn inspect_err<
    T,
    E,
>(result: Result<T, E>, f: fn(&E) -> ()) -> Result<T, E> {
    let _ = "\n    Observe an `Err(E)` payload while preserving the original result.\n\n    Args:\n        result: Result to inspect.\n        f: Function called with an implicit borrow of the `Err(E)` payload.\n\n    Returns:\n        The original `Result[T, E]` after calling `f` for the `Err(E)` branch.\n    ";
    let _ = match result {
        Ok(value) => {
            return Ok::<T, E>(value);
        }
        Err(error) => {
            let _ = f(&error);
            return Err::<T, E>(error);
        }
    };
}
pub use inspect_err as inspect_err;
